[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "nexaai"
dynamic = ["version"]
description = "Nexa AI SDK"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nexa AI", email = "octopus@nexa4ai.com" }]
dependencies = [
    "cmake", # For building C++ extensions
    "faster_whisper",
    "typing-extensions>=4.5.0", # For ggml
    "numpy>=1.20.0",
    "diskcache>=5.6.1",
    "jinja2>=2.11.3",
    "librosa>=0.8.0",
    "fastapi",
    "uvicorn",
    "pydantic",
    "pillow",
    "prompt_toolkit",
    "tqdm",                     # Shared dependencies
    "tabulate",
    "streamlit",
    "streamlit-audiorec",
    "python-multipart",
    "streamlit-audiorec",
    "cmake",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
onnx = [
    "librosa",
    "optimum[onnxruntime]", # for CPU version
    "diffusers",            # required for image generation
    "optuna",
    "pydantic",
    "PyYAML",
    "requests",
    "setuptools",
    "soundfile",
    "transformers",
    "ttstokenizer",
]

[project.urls]
Homepage = "https://github.com/NexaAI/nexaai-sdk-cpp"
Issues = "https://github.com/NexaAI/nexaai-sdk-cpp/issues"
Documentation = "https://docs-test.nexa4ai.com/"

[project.scripts]
nexa-cli = "nexa.cli.entry:main"
nexa = "nexa.cli.entry:main"
nexaai = "nexa.cli.entry:main"
nexai = "nexa.cli.entry:main"

[tool.scikit-build]
wheel.packages = [
    "nexa",
    "nexa.cli",
    "nexa.gguf",
    "nexa.gguf.llama",
    "nexa.gguf.sd",
    "nexa.gguf.streamlit",
    "nexa.gguf.server",
    "nexa.onnx",
    "nexa.onnx.streamlit",
    "nexa.onnx.server",
]
sdist.include = [
    "CMakeLists.txt",
    "dependency/llama.cpp/*",
    "dependency/stable-diffusion.cpp/*",
]
sdist.exclude = [
    ".github",
    "build",
    "dist",
    "nexa.egg-info",
    "dependency/llama.cpp/build",
    "dependency/stable-diffusion.cpp/build",
]
build.verbose = true
cmake.build-type = "Release"
cmake.version = ">=3.16"
cmake.args = ["-DCMAKE_BUILD_PARALLEL_LEVEL=16"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "nexa/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
